objects/Paid_Time_Off_Allowance__c.object
<CustomObject>
    <fields>
        <fullName>Accrued_Allowance__c</fullName>
        <formula>((TODAY() - DATEVALUE(TEXT(YEAR(TODAY()))&amp;&quot;-01-01&quot;) ) / 365) *  Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accrued Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowance__c</fullName>
        <inlineHelpText>Paid time off allowance</inlineHelpText>
        <label>Allowance</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_used__c</fullName>
        <label>Days used</label>
        <summarizedField>Paid_Time_Off_Request__c.Number_of_days__c</summarizedField>
        <summaryFilterItems>
            <field>Paid_Time_Off_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Paid_Time_Off_Request__c.Paid_Time_Off_Allowance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>User__r.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Paid Time Off Allowances</relationshipLabel>
        <relationshipName>Paid_Time_Off_Allowances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Paid_Time_Off_Allowances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Paid Time Off Allowance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Allowance__c</columns>
        <columns>Days_used__c</columns>
        <columns>User__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Backend_Team</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
        <columns>Employee__c</columns>
        <columns>Year__c</columns>
        <columns>Allowance__c</columns>
        <columns>Days_used__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Nelson Martin</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Carlos Rodriguez Bollain</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>David Marquez Delgado</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Douglas Zaconeta Piva</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Juan Contreras Saiz</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Juan Miguel Cabrera</value>
        </filters>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Julio Solano Velasco</value>
        </filters>
        <label>Backend Team</label>
    </listViews>
    <listViews>
        <fullName>Joe_Imperato_2019</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Joe Imperato 2019</label>
    </listViews>
    <nameField>
        <label>Paid Time Off Allowance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Time Off Allowances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>